<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.rafayet.todolist.MainActivity">
        <item
        android:id="@+id/action_add_task"
        android:orderInCategory="01"
        android:title="@string/title_add"
        app:showAsAction="always"
        android:icon="@drawable/addtask"/>
    <item
        android:id="@+id/action_today"
        android:orderInCategory="05"
        android:title="@string/action_today"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next7days"
        android:orderInCategory="10"
        android:title="@string/action_next7days"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next30days"
        android:orderInCategory="15"
        android:title="@string/action_next30days"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_all"
        android:orderInCategory="20"
        android:title="@string/action_all"
        app:showAsAction="never" />
</menu>
