<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="10dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_date"
    android:padding="10dp"
    android:textSize="20sp"
    android:id="@+id/tvDate"
    android:layout_marginLeft="10dp"
/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvDescription"
    android:text="@string/text_description"
    android:padding="05dp"
    android:textSize="15sp"
    android:paddingLeft="10dp"
    android:layout_below="@+id/tvDate"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvTaskName"
    android:textColor="#FF6347"
    android:text="@string/text_name"
    android:textSize="15sp"
    android:padding="10dp"
    android:layout_marginLeft="10dp"
    android:layout_alignParentRight="true"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvCategory"
    android:text="@string/text_category"
    android:textSize="15sp"
    android:paddingRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_alignParentRight="true"
    android:layout_below="@id/tvTaskName"
    />
</RelativeLayout>